Refactoring MediaType
